--- a/src/content/docs/en/ros2-ws.mdx
+++ b/src/content/docs/en/ros2-ws.mdx
@@ -100,7 +100,7 @@ Note, that for some reason unknown to me, the terms "underlay" and "overlay" are
 <Drawio
     file="ros.drawio"
     page="4"
-    description="Underlay workspace."
+    description="Overlay workspace."
 />
 
 Workspace activation is accumulative.
