--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -126,14 +126,14 @@ A build system is a set of tools and practices used to automate the process of b
     description="Simple CMAKE build flow."
 />
 
-[CMake Demo](https://www.github.com/harleylara/cpp-intro/001-intro/CMakeLists.txt)
+[CMake Demo](https://github.com/harleylara/cpp-intro/blob/master/001-intro/CMakeLists.txt)
 
 <Terminal
     title="Build with CMake"
     content="mkdir build\
 cd build\
 cmake ..\
-cmake --build ."
+make"
 />
 
 Run executable
