--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -145,15 +145,6 @@ Run executable
 
 ROS use [colcon](https://colcon.readthedocs.io/en/released/) (collective construction): A `CLI` tool to build projects (python or cpp). `colcon` uses [ament_cmake](https://docs.ros.org/en/humble/How-To-Guides/Ament-CMake-Documentation.html) which is a wrapper around `CMAKE`.
 
-Coding aspect (basics):
-- variables
-- conditions
-- arrays
-- loops
-- structs
-- functions
-- classes
-- pointers
-- inheritance
-- function templates
-- class templates
+## External Resources
+
+- [CMake Tutorial](https://cmake.org/cmake/help/latest/guide/tutorial/index.html)
