--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -37,6 +37,7 @@ Knowledge required:
 - Understand GNU/Linux file system
 - Proficiency with basic terminal commands (bash)
 - Python/C++ skills, including basic OOP concepts
+- Basics of VCS (Version control system) with git
 
 Software requirements:
 - OS: Ubuntu 22.04
