--- a/src/content/docs/en/ros2-pkgs.mdx
+++ b/src/content/docs/en/ros2-pkgs.mdx
@@ -32,7 +32,10 @@ ROS package: "A package is an organizational unit for your code."
 
 ## Packages in ROS 2
 
-### Packages Types and Structures
+Packages types:
+- [`ament_cmake`](https://docs.ros.org/en/humble/How-To-Guides/Ament-CMake-Documentation.html)
+- [`ament_python`](https://docs.ros.org/en/humble/How-To-Guides/Developing-a-ROS-2-Package.html)
+- [`ament_cmake_python`](https://docs.ros.org/en/humble/How-To-Guides/Ament-CMake-Python-Documentation.html)
 
 #### Cmake-based package:
 
