Add new codeblock

--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -3,6 +3,8 @@ title: "C++ Language Basics"
 draft: true
 ---
 
+import CodeBlockNew from "../../../components/Globals/CodeBlockNew.astro"
+
 export const components = {
     blockquote: Blockquote,
     a: A,
@@ -27,7 +29,6 @@ export const components = {
 Coding aspect (basics):
 - variables
 - conditions
-- arrays
 - loops
 - structs
 - functions
@@ -48,6 +49,17 @@ Types groups:
 - null pointer
 
 [variables demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/var.cpp)
+
+<CodeBlockNew 
+    filename="var.cpp" 
+    code="" 
+    lang="cpp"
+    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/var.cpp"
+/>
+
+```python filename="normal.py"
+print("just a normal code block")
+```
 
 More details on variables check [Variables and types - Fundamental data types](https://cplusplus.com/doc/tutorial/variables/#fundamental)
 
