--- a/src/content/docs/en/research-sources.mdx
+++ b/src/content/docs/en/research-sources.mdx
@@ -1,5 +1,5 @@
 ---
-title: Source of information
+title: Sources of Information
 description: A collection of places to look for information
 ---
 
@@ -7,7 +7,6 @@ export const components = {
     blockquote: Blockquote,
     a: A,
     pre: Pre,
-    code: CodeBlock,
     pre: InlineCode,
     em: Em,
     h1: H1,
