--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -3,13 +3,12 @@ title: "C++ Language Basics"
 draft: true
 ---
 
-import CodeBlockNew from "../../../components/Globals/CodeBlockNew.astro"
+import CodeBlock from "../../../components/Globals/CodeBlock.astro"
 
 export const components = {
     blockquote: Blockquote,
     a: A,
     pre: Pre,
-    code: CodeBlock,
     em: Em,
     h1: H1,
     h2: H2,
@@ -50,7 +49,7 @@ Types groups:
 
 [variables demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/var.cpp)
 
-<CodeBlockNew 
+<CodeBlock
     filename="var.cpp" 
     code="" 
     lang="cpp"
