--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -157,5 +157,5 @@ ROS can intermix programming languages:
 ROSources ? (bad joke):
 - [ROS website](https://www.ros.org/)
 - [ROS Answers](https://answers.ros.org/) this page is no longer active, use instead [Robotics Stack Exchange](https://robotics.stackexchange.com/)
-- `<package>` wiki
+- Google package name and keywork wiki: "package" wiki
 - [Official documentation](https://docs.ros.org/) RTFM (Read The Friendly Manual) :D
