--- a/src/content/docs/en/ros2-urdf.mdx
+++ b/src/content/docs/en/ros2-urdf.mdx
@@ -7,7 +7,6 @@ export const components = {
     blockquote: Blockquote,
     a: A,
     pre: Pre,
-    code: CodeBlock,
     pre: InlineCode,
     em: Em,
     h1: H1,
@@ -27,6 +26,7 @@ export const components = {
 
 ## The Jungle of Formats
 
+There are some many formats to represent robots (and other things):
 - URDF
     - [URDF improvements](https://discourse.ros.org/t/urdf-improvements/30520)
     - [Short-term WG about URDF / description formats](https://discourse.ros.org/t/short-term-wg-about-urdf-description-formats/30843)
@@ -37,5 +37,6 @@ export const components = {
 
 ## Papers
 
+Academy papers:
 - [Understanding URDF: A Survey Based on User Experience](https://arxiv.org/abs/2302.13442)
 - [Understanding Xacro Misunderstandings](https://arxiv.org/abs/2109.09694)
