updates in cpp examples

--- a/src/content/docs/en/cpp-basics.mdx
+++ b/src/content/docs/en/cpp-basics.mdx
@@ -56,14 +56,86 @@ Types groups:
     remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/var.cpp"
 />
 
-```python filename="normal.py"
-print("just a normal code block")
-```
-
 More details on variables check [Variables and types - Fundamental data types](https://cplusplus.com/doc/tutorial/variables/#fundamental)
 
 ## Conditions
 
-[conditions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/conditions.cpp)
+[conditions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/conditions.cpp):
+- if
+- else
+- else if
+- switch
+
+<CodeBlock
+    filename="conditions.cpp" 
+    code="" 
+    lang="cpp"
+    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/conditions.cpp"
+/>
 
 More details on conditions and flow check [Statements and flow control](https://cplusplus.com/doc/tutorial/control/)
+
+## Loops
+
+[lopp demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/loops.cpp):
+- while
+- do-while
+- for (common)
+- for-each (with type deduction)
+- break
+
+<CodeBlock
+    filename="conditions.cpp"
+    code="" 
+    lang="cpp"
+    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/loops.cpp"
+/>
+
+## Functions
+
+Topics:
+- functions with no type returned.
+- functions declaration and function definition (actual implementation).
+- functions with type returned.
+- parameters:
+    - by value
+    - by reference
+    - `const`
+    - default values
+- functions overload
+- scopes
+
+[functions demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/functions.cpp)
+
+<CodeBlock
+filename="functions.cpp"
+code="" 
+lang="cpp"
+remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/functions.cpp"
+/>
+
+## Structs
+
+[structs demo](https://github.com/harleylara/cpp-intro/blob/master/002-basics/structs.cpp)
+
+<CodeBlock
+    filename="structs.cpp"
+    code="" 
+    lang="cpp"
+    remoteURL="https://raw.githubusercontent.com/harleylara/cpp-intro/master/002-basics/structs.cpp"
+/>
+
+## Classes
+
+Topics:
+- members: 
+    - public vs. private
+    - members initialization
+    - getters and setters
+- constructor:
+    - [initialization](https://en.cppreference.com/w/cpp/language/value_initialization)
+    - overload
+    - hidden
+    - uniform initialization
+
+More about classes in [Classes I](https://cplusplus.com/doc/tutorial/classes/)
