--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -32,8 +32,7 @@ Knowledge required:
 - Basics of VCS (Version control system) with git.
 
 Software requirements:
-- Text editor: [Visual Studio Code](https://code.visualstudio.com/) with the following extension:
-    - [C/C++ by Microsoft](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools)
+- Text editor: [Visual Studio Code](https://code.visualstudio.com/) with the [C/C++ by Microsoft](https://marketplace.visualstudio.com/items?itemName=ms-vscode.cpptools) extension.
 - Compiler: `gcc`, a reference article for installation, [Using GCC with MinGW](https://code.visualstudio.com/docs/cpp/config-mingw#_prerequisites).
 
 ## The Build Process
