--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -39,7 +39,7 @@ Knowledge required:
 - Basics of VCS (Version control system) with git
 
 Software requirements:
-- OS: Ubuntu 22.04
+- OS: Ubuntu 22.04 Desktop
 - Install: ROS Humble, check the official documentation and follow [Ubuntu Debian packages (recommended)](https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html)
 
 ## Why do we need ROS nowadays?
