add ros stack architecture

--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -152,6 +152,14 @@ Is correctly spelled with a space: `ROS 2` or `ROS 1`, check the [Trademark Rule
 ROS can intermix programming languages:
 - Official support: C, C++, Python
 
+## Architecture ROS 2
+
+<Drawio
+    file="ros.drawio"
+    page="5"
+    description="Architecture ROS 1 vs. ROS 2."
+/>
+
 ## ROS Resources
 
 ROSources ? (bad joke):
