--- a/src/content/docs/en/ros2-ws.mdx
+++ b/src/content/docs/en/ros2-ws.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Workspace"
-description: "Create and manage a ROS workspace"
+description: "Create and manage a ROS workspaces"
 ---
 
 export const components = {
@@ -8,6 +8,7 @@ export const components = {
     a: A,
     pre: Pre,
     pre: InlineCode,
+    code: _CodeBlock,
     em: Em,
     h1: H1,
     h2: H2,
@@ -34,7 +35,7 @@ Names can be:
 
 <Drawio
     file="ros.drawio"
-    page="2"
+    page="1"
     description="Names in ROS"
 />
 
@@ -75,7 +76,7 @@ The workspace contains:
 
 <Drawio
     file="ros.drawio"
-    page="3"
+    page="2"
     description="Underlay workspace."
 />
 
@@ -98,7 +99,7 @@ Note, that for some reason unknown to me, the terms "underlay" and "overlay" are
 
 <Drawio
     file="ros.drawio"
-    page="4"
+    page="3"
     description="Overlay workspace."
 />
 
