--- a/src/content/docs/en/ros2-dds.mdx
+++ b/src/content/docs/en/ros2-dds.mdx
@@ -8,6 +8,7 @@ export const components = {
     a: A,
     pre: Pre,
     pre: InlineCode,
+    code: _CodeBlock,
     em: Em,
     h1: H1,
     h2: H2,
