--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -7,6 +7,7 @@ export const components = {
     blockquote: Blockquote,
     a: A,
     pre: Pre,
+    code: _CodeBlock,
     em: Em,
     h1: H1,
     h2: H2,
@@ -31,7 +32,7 @@ If you are wondering:
 
 ## Prerequisites for Diving
 
-Knowledge required:
+Knowledge required: 
 - Familiarity with Ubuntu's desktop environment
 - Understand GNU/Linux file system
 - Proficiency with basic terminal commands (bash)
